feat: add auto-increment versioning for generated JAR files